--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://www.ehang.com/Public/cn/ehangweb/css/video.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -25,7 +25,7 @@
     />
     <link rel="stylesheet" href="./css/bootstrap.css" />
 
-    <link rel="stylesheet" href="./css/pricing.css" />
+    <link rel="stylesheet" href="/css/pricing.css" />
   </head>
   <body>
     <!-- =============================================================START NAVBAR================================================================ -->
