--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://www.ehang.com/Public/cn/ehangweb/css/video.css"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="./css/bootstrap.css" />
 
-    <link rel="stylesheet" href="/css/pricing.css" />
+    <link rel="stylesheet" href="./css/pricing.css" />
   </head>
   <body>
     <!-- =============================================================START NAVBAR================================================================ -->
@@ -1852,7 +1852,7 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="/js/pricing.js"></script>
+    <script src="./js/pricing.js"></script>
     <!-- ==============================================================END PRICING================================================================= -->
 
     <!-- ==============================================================START FORM================================================================= -->
@@ -1971,7 +1971,7 @@
         </div>
       </div>
 
-      <script src="/js/ourteam.js"></script>
+      <script src="./js/ourteam.js"></script>
     </section>
 
     <!-- ==============================================================START FOOTER================================================================= -->
@@ -2051,7 +2051,7 @@
           </div>
         </div>
       </div>
-      <script src="/js/script.js"></script>
+      <script src="./js/script.js"></script>
     </section>
 
     <!-- ==============================================================END FOOTER================================================================= -->
